--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/kam773/budget-app/",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.2.0",
     "gh-pages": "^1.2.0"
   },
   "devDependencies": {
